# semantic-ui-bridge

./: .gitignore  ANNOUNCEMENT_CN.md  ANNOUNCEMENT_EN.md  LAUNCH_PLAN.md  LICENSE  README.md  SOCIAL_POSTS.md  demo_end_to_end.py  demo_github.py  demo_page.html  demo_real.py  pyproject.toml  verify.py
demo_assets/: demo_output.txt
docs/: SPEC.md  TEST_SPEC.md  WHITEPAPER.md
scripts/: record_demo.sh
semantic_ui_bridge/adapters/: __init__.py  base.py  macos_ax_adapter.py  playwright_adapter.py  unified.py
semantic_ui_bridge/core/: __init__.py  normalizer.py  protocol.py
src/adapters/: __init__.py  playwright_adapter.py  unified.py
src/core/: __init__.py  errors.py  models.py  normalizer.py  protocol.py
tests/: conftest.py  test_integration.py  test_models.py  test_normalizer.py  test_playwright_adapter.py  test_protocol.py
