[project]
name = "semantic-ui-bridge"
version = "0.1.0"
description = "AI Agent's universal interface to graphical UIs — no screenshots, no OCR."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.0",
    "ruff>=0.5",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]